# px4control

./: .gitignore  README.md
controller/: algorithm.py  algorithm_01.py  algorithm_studSasha.py  attitude.py  camera_tracker.py  controller.launch  controller.py  controller.sh  controller_attitude.py  controller_attitude.sh  coordinate.py  gazebo-sitl.sh  main.py  main.sh  mavros-sitl.launch  mavros-sitl.sh  mavros.launch  mavros.sh  run-controller.sh  run.launch  run.sh  simulator.launch  simulator.sh  vision_pose.py
controller/src/controller/: CMakeLists.txt  package.xml
controller/src/controller/Model/: Model 181017.ipynb
controller/src/controller/scripts/: algorithm.py  algorithm_01.py  algorithm_delay_comp  algorithm_delay_comp.py  algorithm_relay.py  algorithm_studSasha.py  algorithm_studSasha_kalman.py  algorithm_studSasha_kalman_line(old).py  algorithm_studSasha_kalman_line.py  algorithm_studSasha_kalman_traj.py  algorithm_studSasha_line.py  algorithm_studSasha_traj.py  algorithm_testg3m1.py  algorithm_testg3m2.py  algorithm_testg3m2.py.save  algorithm_testg3m2.py.save.1  algorithm_testg3m2.py.save.2  algorithm_with_load  algorithm_with_load.py  algorithm_with_load_without_reg  algorithm_with_load_without_reg.py  controller  controller.py  kalman_quadro.py  kalman_quadro_gamma.py  model.py  model_gamma.py
controller/src/simulator/: CMakeLists.txt  package.xml
controller/src/simulator/scripts/: model.py  simulator
pixhawk/: camera_tracker.py  run.sh  vision_pose.py
track/: calibrate-1280x720.yaml  calibrate-1920x1080.yaml  calibrate-640x480.yaml  (+10 more)
(+10 files in other folders)
